# arm11

./: .gitignore  CMakeLists.txt  README.md
doc/: Checkpoint.tex  Makefile  Manually Created Tests  Report.tex
extension/: Makefile  README.txt  blm_quiz  makefile  template_app
extension/glade/: #window_main.glade#  Reece_updates.glade  main_window_glade.glade  window_main.glade
extension/src/: Makefile  PicPractice  PicPractice.c  main.c  question.c  quiz.c
extension/src/quizzes/: past_blm.txt
extension/src/utils/: extension.h  file_functions.c  generate_tags.c  multiple_choice.c  pages.c  write_to_file.c
extension/src_gui/: extension.h  generatetags.c  main.c  multiplechoice.c  pages.c  testfile.txt  write_to_file.c
extension/src_gui/quizzes/: demonstration_quiz.txt  modern_blm.txt  testfile.txt
src/: Makefile  armstate.h  assemble.c  constants.h  emulate.c  emulate.h  instructionTypes.h  instructiontypes.c  state_of_machine.h  structs.h
src/assemble/: assemble.c  assemble_utils.c  assemble_utils.h
src/assembler/: assemble.c  assemble.h  assemble_utils.c  assemble_utils.h
src/assembler/utils/: constants.h  dictionaries.c  helpers.c  memory_alloc.c  structs.h
src/emulator/: constants.h  emulate.c  emulate.h  machineState.h  structs.h
src/emulator/utils/: instructionTypes.h  instruction_types.h  machineState.h  machine_state.h
